--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 # Include relevant text files.
-include LICENSE README.md requirements.txt
+include LICENSE README.rst requirements.txt VERSION
 
 # Exclude junk.
 global-exclude .DS_Store
