--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34
+envlist = py27, py34, black
 
 [testenv]
 deps =
@@ -13,3 +13,12 @@ basepython = python2.7
 
 [testenv:py34]
 basepython = python3.4
+
+[testenv:black]
+deps=black
+basepython=python3
+setenv =
+    LC_ALL=C.UTF-8
+    LANG=C.UTF-8
+commands=black --check --verbose .
+
