tox: fix nose install

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ envlist = py27, py34, black
 
 [testenv]
 deps =
+    nose
     -r{toxinidir}/requirements.txt
+whitelist_externals = python, nosetests
 commands =
     install: python ./setup.py install {posargs}
     nosetests {posargs}
