--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
-envlist = py27, py34
+envlist = py27, py34, black
 
 [testenv]
 deps =
+    nose
     -r{toxinidir}/requirements.txt
+whitelist_externals = python, nosetests
 commands =
     install: python ./setup.py install {posargs}
     nosetests {posargs}
@@ -13,3 +15,12 @@ basepython = python2.7
 
 [testenv:py34]
 basepython = python3.4
+
+[testenv:black]
+deps=black
+basepython=python3
+setenv =
+    LC_ALL=C.UTF-8
+    LANG=C.UTF-8
+commands=black --check --verbose .
+
