--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-__pycache__
-.tox/
 *.pyc
-bin/
-cronicle.egg-info/
 .direnv
 .envrc
+.pre-commit-config.yaml
+.tox/
+__pycache__
+bin/
+cronicle.egg-info/
+include/
 lib/
 local/
-include/
-test/rsrc/foobar*
+pip-selfcheck.json
 test/rsrc/DAILY/*
+test/rsrc/foobar*
 test/rsrc/MONTHLY/*
