tox: add 'cov' env

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py35, black
+envlist = py27, py35, black, cov
 
 [testenv]
 deps =
@@ -10,6 +10,12 @@ commands =
     install: python ./setup.py install {posargs}
     nosetests {posargs}
 
+[testenv:cov]
+deps =
+    coverage
+commands =
+    nosetests --with-coverage {posargs}
+    
 [testenv:py27]
 deps = backports.tempfile
 basepython = python2.7
@@ -24,4 +30,3 @@ setenv =
     LC_ALL=C.UTF-8
     LANG=C.UTF-8
 commands=black --check --verbose .
-
