.travis.yml: declare cov tox env

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 
 env:
-  - TOX_ENV=py27 COVERAGE=1
+  - TOX_ENV=py27
+  - TOX_ENV=cov COVERAGE=1
 
 before_install:
     - "[ ! -z $COVERAGE ] && travis_retry pip install coveralls || true"
