refactor(setup): declare coverage config in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
-[report]
+[coverage:run]
 omit =
     */pyshared/*
     */python?.?/*
@@ -11,3 +11,7 @@ exclude_lines =
     if __name__ == .__main__.:
     def __repr__
     def parse_args
+
+
+[semantic_release]
+version_variable = cronicle/__init__.py:__version__
