documentation(coverage): fix config of files to omit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,8 @@
-[coverage:run]
+[coverage:report]
 omit =
+    cronicle/confit.py
     */pyshared/*
     */python?.?/*
-    */site-packages/nose/*
-    */test/*
-    cronicle/confit.py
-exclude_lines =
-    assert False
-    raise NotImplementedError
-    if __name__ == .__main__.:
-    def __repr__
-    def parse_args
-
 
 [semantic_release]
 version_variable = cronicle/__init__.py:__version__
