docs(setup): fix documentation type

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,4 +5,4 @@ omit =
 
 [semantic_release]
 version_variable = cronicle/__init__.py:__version__
-changelog_sections = feature,fix,docs
+changelog_sections = feature,fix,documentation
