--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py27, py35, black, cov
 deps =
     nose
     -r{toxinidir}/requirements.txt
+extras = tests
 whitelist_externals = python, nosetests
 commands =
     install: python ./setup.py install {posargs}
