--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
     
 # To install dependencies, tell tox to do everything but actually running the test.
 install:
+    - travis_retry pip install tox
     - travis_retry pip install -r requirements.txt
     - travis_retry tox -e $TOX_ENV --notest
 
