--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 # Include relevant text files.
-include LICENSE README.rst requirements.txt cronicle/VERSION
+include LICENSE README.rst requirements.txt
 
 # Exclude junk.
-global-exclude .DS_Store
+global-exclude
