ci(tox): fix whitelist_externals

--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,14 @@
 envlist = py27, py35, black, cov
 
 [testenv]
+sitepackages = false
 deps =
     nose
     -r{toxinidir}/requirements.txt
 extras = tests
-whitelist_externals = python, nosetests
+whitelist_externals =
+   python
+   nosetests
 commands =
     install: python ./setup.py install {posargs}
     nosetests {posargs}
@@ -16,7 +19,7 @@ deps =
     coverage
 commands =
     nosetests --with-coverage {posargs}
-    
+
 [testenv:py27]
 deps = backports.tempfile
 basepython = python2.7
