ci(tox): use pytest

--- a/tox.ini
+++ b/tox.ini
@@ -4,21 +4,24 @@ envlist = py27, py36, black, cov
 [testenv]
 sitepackages = false
 deps =
+    pytest
     nose
+    mock
     -r{toxinidir}/requirements.txt
 extras = tests
 whitelist_externals =
    python
-   nosetests
+   pytest
 commands =
     install: python ./setup.py install {posargs}
-    nosetests {posargs}
+    python -m pytest -vs {posargs}
 
 [testenv:cov]
 deps =
     coverage
+    pytest
 commands =
-    nosetests --with-coverage {posargs}
+    python -m pytest -vs --with-coverage {posargs}
 
 [testenv:py27]
 deps = backports.tempfile
