tests: fix tests in python 2.7

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,12 @@ commands =
     python -m pytest -vs --with-coverage {posargs}
 
 [testenv:py27]
-deps = backports.tempfile
+deps =
+    pytest
+    nose
+    mock
+    backports.tempfile
+    -r{toxinidir}/requirements.txt
 basepython = python2.7
 
 [testenv:py36]
