--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install flake8 pytest mock
         python -m pip install backports
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements-${{ matrix.python-version }}.txt ]; then pip install -r requirements-${{ matrix.python-version }}.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
