--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest mock
+        pip install -r requirements-${{ matrix.python-version }}.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-${{ matrix.python-version }}.txt ]; then pip install -r requirements-${{ matrix.python-version }}.txt; fi
     - name: Lint with flake8
